# rust-orderbook

./: .gitignore  Cargo.toml  README.md  perf.data
docs/: packet_info.txt
output/: output.txt
src/: error.rs  main.rs  packet.rs  parser.rs
