[package]
name = "rust-orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
core_affinity = "0.8.3"
crossbeam = "0.8.4"
etherparse = "0.19.0"
memmap2 = "0.9.10"
pcap = "2.4.0"
pcap-file = "2.0.0"
thiserror = "2.0.18"
